plantya-management/kubernetes/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plantya-management
  labels:
    app: plantya-management
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plantya-management
  template:
    metadata:
      name: plantya-management
      labels:
        app: plantya-management
    spec:
      containers:
        - name: plantya-management
          image: registry.digitalocean.com/plantya-registry/plantya-management:dev
          ports:
            - containerPort: 8080
